0.9.0/_sources/generated/statsmodels.sandbox.tsa.fftarma.ArmaFft.rst.txt
statsmodels.sandbox.tsa.fftarma.ArmaFft
=======================================

.. currentmodule:: statsmodels.sandbox.tsa.fftarma

.. autoclass:: ArmaFft

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
    
    
      ~ArmaFft.acf
    
    
      ~ArmaFft.acf2spdfreq
    
    
      ~ArmaFft.acovf
    
    
      ~ArmaFft.arma2ar
    
    
      ~ArmaFft.arma2ma
    
    
      ~ArmaFft.fftar
    
    
      ~ArmaFft.fftarma
    
    
      ~ArmaFft.fftma
    
    
      ~ArmaFft.filter
    
    
      ~ArmaFft.filter2
    
    
      ~ArmaFft.from_coeffs
    
    
      ~ArmaFft.from_estimation
    
    
      ~ArmaFft.generate_sample
    
    
      ~ArmaFft.impulse_response
    
    
      ~ArmaFft.invertroots
    
    
      ~ArmaFft.invpowerspd
    
    
      ~ArmaFft.pacf
    
    
      ~ArmaFft.pad
    
    
      ~ArmaFft.padarr
    
    
      ~ArmaFft.periodogram
    
    
      ~ArmaFft.plot4
    
    
      ~ArmaFft.spd
    
    
      ~ArmaFft.spddirect
    
    
      ~ArmaFft.spdmapoly
    
    
      ~ArmaFft.spdpoly
    
    
      ~ArmaFft.spdroots
    
    
      ~ArmaFft.spdshift
    
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~ArmaFft.arroots
      ~ArmaFft.isinvertible
      ~ArmaFft.isstationary
      ~ArmaFft.maroots
   
   