v0.14.6/_sources/generated/statsmodels.sandbox.tsa.fftarma.ArmaFft.rst.txt
statsmodels.sandbox.tsa.fftarma.ArmaFft
=======================================

.. currentmodule:: statsmodels.sandbox.tsa.fftarma

.. autoclass:: ArmaFft
   :exclude-members: acf,acf2spdfreq,acovf,arma2ar,arma2ma,fftar,fftarma,fftma,filter,filter2,from_coeffs,from_estimation,from_roots,generate_sample,impulse_response,invertroots,invpowerspd,pacf,pad,padarr,periodogram,plot4,spd,spddirect,spdmapoly,spdpoly,spdroots,spdshift,

   
   
   .. rubric:: Methods

   .. autosummary::
      :toctree:

      ~ArmaFft.acf
      ~ArmaFft.acf2spdfreq
      ~ArmaFft.acovf
      ~ArmaFft.arma2ar
      ~ArmaFft.arma2ma
      ~ArmaFft.fftar
      ~ArmaFft.fftarma
      ~ArmaFft.fftma
      ~ArmaFft.filter
      ~ArmaFft.filter2
      ~ArmaFft.from_coeffs
      ~ArmaFft.from_estimation
      ~ArmaFft.from_roots
      ~ArmaFft.generate_sample
      ~ArmaFft.impulse_response
      ~ArmaFft.invertroots
      ~ArmaFft.invpowerspd
      ~ArmaFft.pacf
      ~ArmaFft.pad
      ~ArmaFft.padarr
      ~ArmaFft.periodogram
      ~ArmaFft.plot4
      ~ArmaFft.spd
      ~ArmaFft.spddirect
      ~ArmaFft.spdmapoly
      ~ArmaFft.spdpoly
      ~ArmaFft.spdroots
      ~ArmaFft.spdshift
   
   
   

   
   
   .. rubric:: Properties

   .. autosummary::
      :toctree:

      ~ArmaFft.arroots
      ~ArmaFft.isinvertible
      ~ArmaFft.isstationary
      ~ArmaFft.maroots
   
   
   